--- a/mission/styles.css
+++ b/mission/styles.css
@@ -7,6 +7,15 @@ body {
     text-align: center;
 }
 
+.dark {
+    background-color: #333;
+    color: white;
+}
+
+.dark h2 {
+    color: #4F9ACF;
+}
+
 .content {
     max-width: 600px;
     margin: 20px auto;
