--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -1,110 +1,158 @@
-@import url("https://fonts.googleapis.com/css2?family=family=Mooli&display=swap");
 :root {
---primary-color: #52489c;
---secondary-color: #59c3c3;
---accent-color: #f45b69;
---text-dark: #333;
---text-light: #ebebeb;
---primary-font: Arial, Helvetica,sans-serif;
---secondary-font: Mooli, san-serif;
-}
-
-body {
+    --primary-color: #52489c;
+    --secondary-color: #59c3c3;
+    --accent-color: #f45b69;
+    --text-dark: #333;
+    --text-light: #ebebeb;
+    --primary-font: Arial, Helvetica, sans-serif;
+    --secondary-font: Mooli, sans-serif;
+  }
+  
+  body {
     font-family: var(--primary-font);
     font-size: larger;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
     color: var(--text-light);
-}
-
-nav {
+  }
+  
+  nav {
     text-align: center;
-}
-
-.menu {
+  }
+  
+  .menu {
     background: none;
     border: none;
     cursor: pointer;
     font-size: larger;
     color: var(--text-light);
-}  
-
-nav .nav-links {
-    display: block;
-}
-
-nav a {
+  }
+  
+  nav .nav-links {
+    display: none; 
+  }
+  
+  nav.show .nav-links {
+    display: block; 
+  }
+  
+  nav a {
+    display: none; 
+  }
+  
+  nav.show a {
     color: var(--text-light);
     display: block;
     margin: 10px 0;
-}
-
-header {
+  }
+  
+  header {
     background-color: var(--primary-color);
     padding: 20px;
-}
-
-h2 {
+  }
+  
+  h2 {
     text-align: center;
-}
-
-.pics {
+  }
+  
+  .pics {
     text-align: center;
-}
-
-img {
+  }
+  
+  img {
     max-width: 100%;
     height: 250px;
     width: 250px;
     object-fit: cover;
-}
-
-footer {
+  }
+  
+  footer {
     padding: 10px;
     padding-left: 20%;
     background-color: var(--primary-color);
     color: var(--text-light);
-}
-
-@media screen and (min-width: 700px) {
+  }
+  
+  .viewer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 10;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+  }
+  
+  .viewer img {
+    max-width: 80%;
+    max-height: 80%;
+    width: auto;
+    height: auto;
+  }
+  
+  .close-viewer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 2rem;
+    color: white;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .close-viewer:hover {
+    color: lightgray;
+  }
+  
+  @media screen and (min-width: 700px) and (max-width: 999px) {
     .pics {
-        grid-template-columns: 1fr 1fr;
-        display: grid;
+      grid-template-columns: 1fr 1fr;
+      display: grid;
     }
-
+  
     nav .nav-links {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-
+  
     nav a {
-        display: inline-block;
-        margin: 20px 30px;
+      display: none;
     }
-
-}
-
-@media screen and (min-width: 1000px) {
+  
+    nav.show a {
+      display: inline-block;
+      margin: 20px 30px;
+    }
+  }
+  
+  @media screen and (min-width: 1000px) {
     .pics {
-        grid-template-columns: 1fr 1fr 1fr;
-        display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      display: grid;
     }
+  
+    h1 {
+      margin-bottom: -10px;
+    }
+  
     .menu {
-        display: none;
+      display: none;
+      margin: 0;
+      padding: 0;
     }
-
+  
     nav a {
-        margin: 23px 60px;
+      display: inline-block;
+      margin: 23px 60px;
+      margin-bottom: -20px;
+      color: var(--text-light);
     }
-}
-
-
-
-
-
-
-
-
+  }
